Update birthday subsection 1.html

--- a/birthday subsection 1.html
+++ b/birthday subsection 1.html
@@ -3,6 +3,7 @@
         <title></title>
     </head>
     <body>
+        <img src="https://nsmathpati.github.io/Queen-s-Birthday/card.jpg" width = "450px">
         <style>.card{
             background-color: aliceblue;
             border-radius: 4px;
@@ -14,7 +15,8 @@
             display:grid;
             place-items: center;
             background: skyblue;
-        }</style>
+        }
+        </style>
         <div class="card"></div>
     </body>
 </html>
